avoid scrollbars if possible

--- a/public/diagram/diagram.css
+++ b/public/diagram/diagram.css
@@ -14,9 +14,21 @@
   font-size: 10px;
 }
 
+html, body {
+  margin: 0;
+  padding: 0;
+}
+
 .button {
   border-radius: 15%;
   background-color: white;
   padding: 0.5em 0.2em;
   font-weight: 600;
+  position: relative;
+  top: 10px;
+  right: 10px;
+}
+
+.main {
+  box-sizing: border-box;
 }
